--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://bootswatch.com/solar/bootstrap.min.css">
+ 
 </head>
 <body>
   <app-root>Loading...</app-root>
 </body>
+ 
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </html>
