--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>SpotyfyApp</title>
-  <base href="">
+  <base href="/">
+   <!--  
+     <base href="http://lammpe.mbnet.fi/Angular%20projektit/Spotyfy_App/">
 
+
+    -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://bootswatch.com/darkly/bootstrap.min.css">
