About combonentiin sisältö

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>SpotyfyApp</title>
-  <base href="/">
+  <base href="">
    <!--  
      <base href="http://lammpe.mbnet.fi/Angular%20projektit/Spotyfy_App/">
 
